--- a/f2e/src/scss/index.scss
+++ b/f2e/src/scss/index.scss
@@ -1,7 +1,34 @@
+body{
+	font-size:62.5%;
+}
+.title{
+	margin-top:30px;
+	text-align:center;
+	font-size:2em;
+}
+.main{
+	width:80%;
+	margin:0 auto;
+	.question{
+		margin-top: 25px;		
+	}
+	.qt{
+		margin:0 0 10px 0;
+	}
+}
 .dragula{
    div{
    	line-height: 24px;
     border: 1px dashed #d3d3d3;
     margin-bottom: 4px;
+    cursor: move;
+    width: 30%;
+    word-break: break-all;
    }
+}
+input[type=text]{
+	width:40%;
+}
+button{
+	margin-top:50px;
 }
