--- a/f2e/src/scss/admin.scss
+++ b/f2e/src/scss/admin.scss
@@ -8,19 +8,24 @@ input{
 	.leftSide{
 		font-size: 12px;
 		float:left;
-		a{
-			margin:0 10px;
-			display: block;
-			line-height: 30px;
-		    height: 30px;
-		}
 		.qs{
 			width: 100px;
+			background-color:#fff;
+			text-align: center;
+			border-radius:4%;
+			i{
+				color: #2db7f5;
+				margin-right: 5px;
+			}
 			li{
-				background-color: #fff;
-		    	padding: 0 8px;
-		    	border-bottom: 1px solid #F6F7F7;
 		    	font-size: 16px;
+		    	margin-bottom: 5px;
+		    	padding: 0 5px;
+			}
+			a{
+				display: inline-block;
+				line-height: 30px;
+			    height: 30px;
 			}
 		}
 	}
@@ -30,12 +35,15 @@ input{
 		margin-left: 10px;
 		.panel{
 			background-color: #fff;
-			margin-bottom: 20px;
+			margin-bottom: 5px;
 			padding:10px;
+    		border: 1px solid #d8d8d8;
+    		font-size: 18px;
 			.title{
 				line-height: 30px;
 				height: 30px;
 				margin-bottom: 10px;
+				color: #2db7f5;
 			}
 			.del{
 				float: right;
@@ -50,7 +58,7 @@ input{
 			}
 		}
 		.targetQ{
-			min-height: 250px;
+			margin-top: 10px;
 		}
 		.list{
 			margin-top: 10px;
@@ -63,6 +71,10 @@ input{
 			}
 			li{
 				line-height: 30px;
+				font-size: 14px;
+				i{
+					color: red
+				}
 			}
 		}
 	}
