--- a/f2e/src/scss/admin.scss
+++ b/f2e/src/scss/admin.scss
@@ -7,32 +7,26 @@ input{
 .main{
 	.leftSide{
 		font-size: 12px;
-		float:left;
-		.qs{
-			width: 100px;
-			background-color:#fff;
-			text-align: center;
-			border-radius:4%;
+		background-color:#fff;
+		line-height: 40px;
+		text-align: center;
+		.qs{	
 			i{
-				color: #2db7f5;
 				margin-right: 5px;
 			}
 			li{
-		    	font-size: 16px;
+		    	font-size: 14px;
 		    	margin-bottom: 5px;
 		    	padding: 0 5px;
 			}
 			a{
 				display: inline-block;
-				line-height: 30px;
 			    height: 30px;
 			}
 		}
+
 	}
 	.rightQuestion{
-		float: left;
-		width: 600px;
-		margin-left: 10px;
 		.panel{
 			background-color: #fff;
 			margin-bottom: 5px;
@@ -44,6 +38,7 @@ input{
 				height: 30px;
 				margin-bottom: 10px;
 				color: #2db7f5;
+				font-size: 14px;
 			}
 			.del{
 				float: right;
@@ -78,4 +73,10 @@ input{
 			}
 		}
 	}
+	.op,.style{
+		font-size: 12px;
+		background-color:#fff;
+		line-height: 40px;
+	}
+
 }
