--- a/f2e/src/scss/admin.scss
+++ b/f2e/src/scss/admin.scss
@@ -10,6 +10,8 @@ input{
 		background-color:#fff;
 		line-height: 40px;
 		text-align: center;
+		position: fixed;
+		z-index: 10;		
 		.qs{	
 			i{
 				margin-right: 5px;
